# spacetimelib

./: .buildinfo  .gitignore  LICENSE  README.md  api-reference.html  concepts.html  environment.yaml  first_simulation.py  genindex.html  getting-started.html  index.html  installation.html  learning-resources.html  objects.inv  plan.md  pyproject.toml  search.html  searchindex.js  setup.py  start-here.html  todo.txt  tutorials.html
.github/workflows/: python-package-conda.yml
_sources/: api-reference.rst.txt  concepts.md.txt  getting-started.md.txt  index.rst.txt  installation.md.txt  start-here.md.txt
_sources/notebooks/: Length contraction.ipynb.txt  Twin Paradox.ipynb.txt  Worldline Tutorial.ipynb.txt
doc/source/: api-reference.rst  conf.py  getting-started.md  index.rst  installation.md  learning-resources.md  start-here.md  tutorials.rst
docs/source/: api-reference.rst  getting-started.md  index.rst
examples/: clock_grid.py  observer_sim.py
notebooks/: Length contraction of a circle.html  Length contraction.html  Performance.ipynb  Twin Paradox.html  Worldline Tutorial.html  Worldline Tutorial.ipynb
old/: changing_geom_demo_0.py  collision_detection_thoughts.txt  first_simulation.py  lorentz.py  plans.txt  sim.py  test.py  transform_demo_0.py
sim/: frame.py  lorentz.py  sim.py  transformations.py
spacetime/: __init__.py  basic_ops.py  error_checking.py  frame.py  observer.py  transformations.py  worldline.py
spacetimelib/: basic_ops.py  error_checking.py  frame.py  worldline.py
tests/: test_spacetime.py
(+3 files in other folders)
