[build-system]
requires = [
  "setuptools>=61.0",
  "numpy",
  "sphinx",
  "myst-parser",
  "myst-nb",
  "matplotlib",
]
build-backend = "setuptools.build_meta"

[project]
name = "spacetimelib"
version = "0.0.1"
authors = [
  { name="Kurt Mohler", email="kurtamohler@gmail.com" },
]
description = "Special relativity physics library for Python"
readme = "README.md"
requires-python = ">=3"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kurtamohler/spacetimelib"
"Bug Tracker" = "https://github.com/kurtamohler/spacetimelib/issues"
